# document_inspector

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: checkpoint.py  graph.py  monitoring.py  state.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audit.py  ingest.py
backend/app/core/: config.py  database.py
backend/app/engine/: parser.py
backend/app/models/: document.py
backend/app/utils/: bbox.py
backend/scripts/: print_env.py  run_agent_trace.py  run_api.py  verify_hitl_api.py
backend/tests/: conftest.py  test_agent_graph.py  test_bbox.py  test_docling_parser.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: review.ts
frontend/src/components/pdf-viewer/: core.tsx  overlay.tsx
