[project]
name = "document-inspector"
version = "0.1.0"
description = "Docling Audit Agent backend"
requires-python = ">=3.12"
dependencies = [
  "docling>=2.0",
  "fastapi>=0.125",
  "langfuse>=3.11.1",
  "langgraph>=1.0.5",
  "langgraph-checkpoint-postgres>=3.0.2",
  "pydantic>=2.10",
  "asyncpg>=0.29",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.1",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27",
  "pytest>=8.0",
  "reportlab>=4.2",
  "ruff>=0.7",
]
